force-app/main/default/objects/API_Usage__c/API_Usage__c.object-meta.xml
<CustomObject>
    <description>Track API usage and enforce rate limiting</description>
    <label>API Usage</label>
    <nameField>
        <displayFormat>USG-{00000}</displayFormat>
        <label>Usage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>