force-app/main/default/objects/API_Usage__c/fields/Last_Request__c.field-meta.xml
<CustomField>
    <fullName>Last_Request__c</fullName>
    <description>Last API call timestamp</description>
    <label>Last Request</label>
    <type>DateTime</type>
</CustomField>