force-app/main/default/objects/API_Usage__c/fields/Quota_Limit__c.field-meta.xml
<CustomField>
    <fullName>Quota_Limit__c</fullName>
    <defaultValue>1000</defaultValue>
    <description>Daily limit (default 1000)</description>
    <label>Quota Limit</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>