force-app/main/default/objects/API_Usage__c/fields/Requests_Today__c.field-meta.xml
<CustomField>
    <fullName>Requests_Today__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Request counter (default 0)</description>
    <label>Requests Today</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>