force-app/main/default/objects/API_Usage__c/fields/Reset_Date__c.field-meta.xml
<CustomField>
    <fullName>Reset_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>When quota resets (default TODAY)</description>
    <label>Reset Date</label>
    <type>Date</type>
</CustomField>