force-app/main/default/objects/API_Usage__c/fields/User_Identifier__c.field-meta.xml
<CustomField>
    <fullName>User_Identifier__c</fullName>
    <description>JWT subject or IP address</description>
    <externalId>true</externalId>
    <label>User Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>